# openspine

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile.kernel  Dockerfile.shell  LICENSE-APACHE  LICENSE-MIT  README.md  autoresearch.sh  compose.yaml  flake.nix  openspine.docker.example.yaml  openspine.example.yaml  package-lock.json  package.json
crates/openspine-authority/: Cargo.toml
crates/openspine-authority/src/: compose.rs  equivalence.rs  lib.rs  persona_binding.rs  route.rs  worker_grant.rs
crates/openspine-authority/tests/: compose.rs  equivalence.rs
crates/openspine-authority/tests/common/: mod.rs
crates/openspine-gate/: Cargo.toml
crates/openspine-gate/src/: gate.rs  lib.rs
crates/openspine-gate/src/gate/: plan_tests.rs  tests.rs  token_tests.rs
crates/openspine-kernel/: Cargo.toml
crates/openspine-kernel/src/: action_catalog.rs  action_catalog_data.rs  artifact_loader.rs  artifact_loader_impl.rs  artifact_store.rs  artifact_store_format_tests.rs  artifact_store_io.rs  artifact_store_migration.rs  artifact_store_migration_tests.rs  artifact_store_tests.rs  benchmark.rs  briefcase.rs  briefcase_visibility.rs  config.rs  connector_reality.rs  connectors.rs  connectors_tests.rs  counterparty_erasure.rs  counterparty_erasure_matrix_tests.rs  counterparty_erasure_runtime_tests.rs  counterparty_erasure_tests.rs  counterparty_keys.rs  counterparty_keys_durability_tests.rs  counterparty_keys_tests.rs  disclosure.rs  escalation.rs  export_restore_e2e_tests.rs  failure_surfacing.rs  gmail.rs  identity.rs  kernel_tests.rs  main.rs  model_swap.rs  model_swap_recovery.rs  model_swap_recovery_tests.rs  nerve_delivery.rs  nerve_delivery_tests.rs  overlay_compat.rs  overlay_compat_tests.rs  overlay_convergence.rs  (+23 more)
crates/openspine-kernel/src/api/: actions.rs  artifact_activation_tests.rs  artifact_nominate.rs  artifact_propose.rs  artifact_propose_miner_tests.rs  artifact_propose_tests.rs  briefcase.rs  briefcase_tests.rs  connector_breaker.rs  dispatch_tests.rs  generate.rs  generate_tests.rs  handler_registry.rs  mod.rs  model_swap_fault_tests.rs  model_swap_http_tests.rs  nominate_tests.rs  overlay_export_restore.rs  plan.rs  preview_tests.rs  proposal.rs  read_thread.rs  reconfirm_tests.rs  skill_context.rs  skill_context_action_tests.rs  standing_rule_mediation_tests.rs  task.rs  telegram_truncate.rs  tests.rs  webhook.rs  worker.rs
crates/openspine-kernel/src/artifact_loader/: tests.rs
crates/openspine-kernel/src/briefcase/: tests.rs
crates/openspine-kernel/src/connector_reality/: connector_reality_tests.rs
crates/openspine-kernel/src/counterparty_keys/: format.rs  recovery.rs
crates/openspine-kernel/src/disclosure/: disclosure_regression_tests.rs  disclosure_tests.rs
crates/openspine-kernel/src/failure_surfacing/: retry_worker.rs  tests.rs
crates/openspine-kernel/src/gmail/: credentials.rs  helpers.rs  tests.rs
crates/openspine-kernel/src/model_gateway/: mod.rs  providers.rs
crates/openspine-kernel/src/overlay_eval_gate/: judge.rs  mod.rs  personality_probes.rs  replay.rs  tests.rs
crates/openspine-kernel/src/overlay_export_restore/: bundle.rs  bundle_hardening_tests.rs  bundle_tests.rs  control.rs  control_tests.rs  install.rs  types.rs
crates/openspine-kernel/src/overlay_startup_tests/: integrity.rs
crates/openspine-kernel/src/pipeline/: approval.rs  approval_draft.rs  artifact_activation.rs  artifact_nomination.rs  artifact_reconfirmation.rs  digest_pagination.rs  driver.rs  driver_failures.rs  headless.rs  lanes.rs  message_notify.rs  mod.rs  offset.rs  plan_approval.rs  polling.rs  post_approval.rs  route_ambiguity.rs  selection.rs  stages.rs  standing_rule_timer.rs  tests.rs  timer_dispatch.rs  worker_e2e_tests.rs  worker_failed_consumer.rs  worker_result_consumer.rs  worker_result_consumer_tests.rs
crates/openspine-kernel/src/reflection_miner_runtime/: scheduled.rs
crates/openspine-kernel/src/secret_intake/: capture.rs  rollback_tests.rs  tests.rs
crates/openspine-kernel/src/skill/: ceremony.rs  containment_tests.rs  hardening_tests.rs  (+5 more)
crates/openspine-schemas/: Cargo.toml
crates/openspine-schemas/src/: action.rs  agent.rs  approval.rs  artifact.rs  audit.rs  briefcase.rs  digest.rs  disclosure_policy.rs  egress.rs  escalation.rs  event.rs  event_bus.rs  grant.rs  grant_chain.rs  identity.rs  ids.rs  lib.rs  lineage.rs  model.rs  model_swap.rs  nerve.rs  pack.rs  persona.rs  plan.rs  policy.rs  principal.rs  reflection_miner.rs  reflection_miner_errors.rs  reflection_miner_payload.rs  reflection_miner_tests.rs  route.rs  selection.rs  skill.rs  standing_rule.rs  task.rs  worker.rs  workflow.rs
crates/openspine-schemas/tests/: fixtures.rs
crates/openspine-shell/: Cargo.toml
crates/openspine-shell/src/: client.rs  client_tests.rs  main.rs
(+461 files in other folders)
