[workspace]
resolver = "2"
members = [
  "crates/openspine-schemas",
  "crates/openspine-authority",
  "crates/openspine-gate",
  "crates/openspine-kernel",
  "crates/openspine-shell",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
ulid = { version = "1.2.1", features = ["serde"] }
jiff = { version = "0.2.31", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.103"
tempfile = "3.27.0"
rand = "0.10.2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[profile.dev]
debug = 1
