[package]
name = "openspine-gate"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true
description = "OpenSpine gate/action API: the mediation point every effectful action passes through."

[lints.clippy]
all = "warn"

[dependencies]
openspine-schemas = { path = "../openspine-schemas" }
jiff.workspace = true
ulid.workspace = true

[dev-dependencies]
serde_json.workspace = true
